# gravi

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.local.json
.github/ci/: llvm-setup.yml
.github/workflows/: release.yml
examples/: errors.nn  example.nv  fmt_test.nn  fun.nn  functions.nn  identifiers.nn  if-else.nn  imports.nn  lists.nn  logical.nn  loops.nn  mat.nn  range_test.nn  test.nn  test.nv  typechecker.nn
examples/llvm/: var.nn
examples/logical/: example.nn
src/: ast.rs  backend.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs  resolver.rs  symbol.rs  typechecker.rs
src/backend/: c.rs  llvm.rs
wix/: main.wxs
