[package]
name = "gravi"
version = "0.1.0"
edition = "2024"
description = "The Aion programming language compiler"
authors = ["Myin-Studios"]
repository = "https://github.com/Myin-Studios/gravi"
license = "MPL-2.0"

[package.metadata.wix]
upgrade-guid = "459F19DC-8188-47B1-B857-C0110406457E"
path-guid = "DFB04427-8F58-45AB-A001-9ECDA786E2F9"
license = false
eula = false

[dependencies]
colored = "3.1.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
